<resources>
    <string name="app_name">Profile</string>
    <string name="lblName">Nombre</string>
    <string name="hintName">Ej. Juan Perez</string>
    <string name="txtId">Matricula</string>
    <string name="hintMatricula">Ej. 1015-2222</string>
    <string name="lblCarrer">Carrera</string>
    <string name="btnSave">Guardar</string>
    <string name="summaryGreeting">¡Hola, %1$s!</string>
    <string name="summarySubtitle">Aquí está tu información</string>
    <string name="summaryLblName">Nombre:</string>
    <string name="summaryLblId">Matrícula:</string>
    <string name="summaryLblCareer">Carrera:</string>
    <string name="btnEdit">Editar</string>
</resources>
