<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileView"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="141dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hintMatricula"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblId" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="348dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lblId"
        android:layout_width="348dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtId"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <TextView
        android:id="@+id/lblCareer"
        android:layout_width="348dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblCarrer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <Spinner
        android:id="@+id/cbmCareer"
        android:layout_width="349dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCareer" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="131dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="132dp"
        android:text="@string/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbmCareer" />
</androidx.constraintlayout.widget.ConstraintLayout>